--- a/jacob-contact.html
+++ b/jacob-contact.html
@@ -78,23 +78,6 @@ nav{position:fixed;top:0;left:0;right:0;z-index:1000;display:flex;align-items:ce
 .fs-title{font-family:'Cormorant Garamond',serif;font-size:2rem;font-weight:300;color:var(--white);margin-bottom:12px;}
 .fs-text{font-size:.88rem;color:rgba(255,255,255,.5);line-height:1.7;}
 
-/* FAQ */
-.faq-sec{padding:120px 8%;background:#0c0c0c;}
-.faq-layout{display:grid;grid-template-columns:1fr 2fr;gap:80px;align-items:start;}
-.faq-intro{position:sticky;top:110px;}
-.faq-intro .stitle{margin-bottom:20px;}
-.faq-intro p{font-size:.88rem;line-height:1.82;color:rgba(255,255,255,.42);}
-.faq-list{display:flex;flex-direction:column;gap:1px;}
-.faq-item{border:1px solid var(--border);overflow:hidden;transition:border-color .4s;}
-.faq-item.open{border-color:rgba(126,200,227,.2);}
-.faq-q{display:flex;align-items:center;justify-content:space-between;padding:24px 28px;cursor:none;gap:20px;transition:background .3s;}
-.faq-q:hover{background:rgba(255,255,255,.02);}
-.faq-q-text{font-size:.9rem;font-weight:700;color:var(--white);line-height:1.4;}
-.faq-icon{width:28px;height:28px;border:1px solid var(--border);display:flex;align-items:center;justify-content:center;flex-shrink:0;font-size:1.1rem;color:rgba(255,255,255,.4);transition:all .3s;}
-.faq-item.open .faq-icon{border-color:var(--sky);color:var(--sky);transform:rotate(45deg);}
-.faq-a{max-height:0;overflow:hidden;transition:max-height .5s var(--ease),padding .3s;}
-.faq-item.open .faq-a{max-height:200px;}
-.faq-a-inner{padding:0 28px 24px;font-size:.85rem;line-height:1.82;color:rgba(255,255,255,.45);}
 
 /* SOCIAL PROOF STRIP */
 .social-strip{background:var(--gray);border-top:1px solid var(--border);border-bottom:1px solid var(--border);padding:48px 8%;display:flex;align-items:center;justify-content:space-between;gap:32px;flex-wrap:wrap;}
@@ -153,9 +136,9 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
         <div class="cmeth-ic">📞</div>
         <div><div class="cmlabel">Direct Line</div><div class="cmval">(713) 555-0192</div></div>
       </a>
-      <a href="mailto:jacob@jacobwilliams.com" class="cmethod">
+      <a href="/cdn-cgi/l/email-protection#94fef5f7fbf6d4fef5f7fbf6e3fdf8f8fdf5f9e7baf7fbf9" class="cmethod">
         <div class="cmeth-ic">✉️</div>
-        <div><div class="cmlabel">Email</div><div class="cmval">jacob@jacobwilliams.com</div></div>
+        <div><div class="cmlabel">Email</div><div class="cmval"><span class="__cf_email__" data-cfemail="751f14161a17351f14161a17021c19191c1418065b161a18">[email&#160;protected]</span></div></div>
       </a>
       <a href="#" class="cmethod">
         <div class="cmeth-ic">📍</div>
@@ -245,55 +228,18 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
   <div class="sp-item sr"><div class="sp-num">14<sup>d</sup></div><div class="sp-label">Avg. Days to Sell</div></div>
 </div>
 
-<!-- FAQ -->
-<section class="faq-sec">
-  <div class="faq-layout">
-    <div class="faq-intro sr sl">
-      <div class="eyebrow"><div class="eline"></div><span class="etext">FAQ</span></div>
-      <h2 class="stitle">Common<br><em>Questions</em></h2>
-      <p style="margin-top:16px;">Can't find an answer? Reach out directly — Jacob is happy to talk through any questions you have.</p>
-    </div>
-    <div class="faq-list sr">
-      <div class="faq-item">
-        <div class="faq-q" onclick="toggleFaq(this)"><span class="faq-q-text">What areas of Houston do you serve?</span><div class="faq-icon">+</div></div>
-        <div class="faq-a"><div class="faq-a-inner">Jacob serves all of Greater Houston with particular expertise in River Oaks, The Heights, Montrose, Memorial, West University, Bellaire, Midtown, Katy, Sugar Land, and the surrounding suburbs. If you're looking in a specific area, reach out and Jacob will let you know his familiarity with it.</div></div>
-      </div>
-      <div class="faq-item">
-        <div class="faq-q" onclick="toggleFaq(this)"><span class="faq-q-text">How quickly can you list and sell my home?</span><div class="faq-icon">+</div></div>
-        <div class="faq-a"><div class="faq-a-inner">Jacob's average time from listing to contract is under 14 days. With a strategic pricing approach, professional photography, and a broad marketing network, many homes go under contract well before that. He'll give you a realistic timeline at your initial consultation.</div></div>
-      </div>
-      <div class="faq-item">
-        <div class="faq-q" onclick="toggleFaq(this)"><span class="faq-q-text">Do you work with first-time buyers?</span><div class="faq-icon">+</div></div>
-        <div class="faq-a"><div class="faq-a-inner">Absolutely. Jacob takes pride in guiding first-time buyers through every step of the process — from getting pre-approved to closing day. He explains everything clearly, answers every question patiently, and makes sure you feel confident at every stage.</div></div>
-      </div>
-      <div class="faq-item">
-        <div class="faq-q" onclick="toggleFaq(this)"><span class="faq-q-text">What are your fees?</span><div class="faq-icon">+</div></div>
-        <div class="faq-a"><div class="faq-a-inner">Real estate commissions are negotiable and vary by transaction type. Jacob offers transparent, competitive fees and will walk you through all costs clearly before you sign anything. There are no surprises in how he does business.</div></div>
-      </div>
-      <div class="faq-item">
-        <div class="faq-q" onclick="toggleFaq(this)"><span class="faq-q-text">Can you help with relocation to Houston?</span><div class="faq-icon">+</div></div>
-        <div class="faq-a"><div class="faq-a-inner">Yes — Jacob specializes in luxury relocation. He offers curated neighborhood tours (in-person or virtual), school district guidance, lifestyle matching, and end-to-end coordination so your move to Houston is seamless.</div></div>
-      </div>
-      <div class="faq-item">
-        <div class="faq-q" onclick="toggleFaq(this)"><span class="faq-q-text">How do I know what my home is worth?</span><div class="faq-icon">+</div></div>
-        <div class="faq-a"><div class="faq-a-inner">Jacob offers complimentary Comparative Market Analysis (CMA) for all potential sellers. This in-depth report examines recent comparable sales, current market conditions, and your home's unique features to give you a precise, data-backed valuation.</div></div>
-      </div>
-    </div>
-  </div>
-</section>
-
 <!-- FOOTER -->
 <footer>
   <div class="fg-grid">
     <div><div class="fl-name">Jacob Williams</div><p class="fl-tag">Houston's trusted luxury real estate advisor — helping families find exceptional homes since 2012.</p></div>
     <div class="fc"><h4>Navigate</h4><ul><li><a href="jacob-realtor.html">Home</a></li><li><a href="jacob-listings.html">Listings</a></li><li><a href="jacob-about.html">About</a></li><li><a href="jacob-contact.html">Contact</a></li></ul></div>
     <div class="fc"><h4>Areas</h4><ul><li><a href="#">River Oaks</a></li><li><a href="#">The Heights</a></li><li><a href="#">Montrose</a></li><li><a href="#">Memorial</a></li></ul></div>
-    <div class="fc"><h4>Connect</h4><ul><li><a href="#">(713) 555-0192</a></li><li><a href="#">jacob@jacobwilliams.com</a></li><li><a href="#">Instagram</a></li><li><a href="#">LinkedIn</a></li></ul></div>
+    <div class="fc"><h4>Connect</h4><ul><li><a href="#">(713) 555-0192</a></li><li><a href="#"><span class="__cf_email__" data-cfemail="076d66646865476d66646865706e6b6b6e666a742964686a">[email&#160;protected]</span></a></li><li><a href="#">Instagram</a></li><li><a href="#">LinkedIn</a></li></ul></div>
   </div>
   <div class="fbot"><p>© 2025 Jacob Williams Real Estate. All Rights Reserved.</p><p>Licensed Texas Realtor · TREC #12345678</p></div>
 </footer>
 
-<script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
 const cur=document.getElementById('cur'),cr=document.getElementById('curRing');let mx=0,my=0,rx=0,ry=0;
 document.addEventListener('mousemove',e=>{mx=e.clientX;my=e.clientY;});
 (function a(){cur.style.left=mx+'px';cur.style.top=my+'px';rx+=(mx-rx)*.14;ry+=(my-ry)*.14;cr.style.left=rx+'px';cr.style.top=ry+'px';requestAnimationFrame(a);})();
@@ -304,8 +250,4 @@ document.querySelectorAll('.ml').forEach(l=>l.addEventListener('click',()=>{hbg.
 const obs=new IntersectionObserver(e=>e.forEach(x=>{if(x.isIntersecting){x.target.classList.add('vis');obs.unobserve(x.target);}}),{threshold:.08,rootMargin:'0px 0px -50px 0px'});
 document.querySelectorAll('.sr').forEach(el=>obs.observe(el));
 function selectIntent(btn){document.querySelectorAll('.intent-btn').forEach(b=>b.classList.remove('sel'));btn.classList.add('sel');}
-function submitForm(){document.getElementById('contactForm').style.display='none';document.getElementById('formSuccess').style.display='block';}
-function toggleFaq(el){const item=el.closest('.faq-item');const wasOpen=item.classList.contains('open');document.querySelectorAll('.faq-item').forEach(i=>i.classList.remove('open'));if(!wasOpen)item.classList.add('open');}
-</script>
-</body>
-</html>
+function submitForm(){document.getElementById(
