--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ footer { background:#040404; border-top:1px solid var(--border); padding:72px 8%
 
 <!-- NAV -->
 <nav id="nav">
-  <a href="#home" class="logo">
+  <a href="index.html" class="logo">
     <span class="logo-n">Jacob Williams</span>
     <span class="logo-s">Luxury Real Estate · Houston</span>
   </a>
