--- a/jacob-listings.html
+++ b/jacob-listings.html
@@ -164,7 +164,7 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
 <div class="cur-ring" id="curRing"></div>
 
 <nav>
-  <a href="jacob-realtor.html" class="logo"><span class="logo-n">Jacob Williams</span><span class="logo-s">Luxury Real Estate · Houston</span></a>
+  <a href="index.html" class="logo"><span class="logo-n">Jacob Williams</span><span class="logo-s">Luxury Real Estate · Houston</span></a>
   <ul class="navul">
     <li><a href="jacob-services.html">Services</a></li>
     <li><a href="jacob-listings.html" class="active">Listings</a></li>
