--- a/jacob-property.html
+++ b/jacob-property.html
@@ -149,7 +149,7 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
 <div class="cur-ring" id="curRing"></div>
 
 <nav>
-  <a href="jacob-realtor.html" class="logo"><span class="logo-n">Jacob Williams</span><span class="logo-s">Luxury Real Estate · Houston</span></a>
+  <a href="index.html" class="logo"><span class="logo-n">Jacob Williams</span><span class="logo-s">Luxury Real Estate · Houston</span></a>
   <ul class="navul">
     <li><a href="jacob-listings.html">Listings</a></li>
     <li><a href="jacob-about.html">About</a></li>
