--- a/jacob-contact.html
+++ b/jacob-contact.html
@@ -114,7 +114,7 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
 </nav>
 <div class="mmenu" id="mmenu">
   <ul>
-    <li><a href="jacob-realtor.html" class="ml">Home</a></li>
+    <li><a href="index.html" class="ml">Home</a></li>
     <li><a href="jacob-listings.html" class="ml">Listings</a></li>
     <li><a href="jacob-about.html" class="ml">About</a></li>
     <li><a href="jacob-contact.html" class="ml">Contact</a></li>
@@ -232,7 +232,7 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
 <footer>
   <div class="fg-grid">
     <div><div class="fl-name">Jacob Williams</div><p class="fl-tag">Houston's trusted luxury real estate advisor — helping families find exceptional homes since 2012.</p></div>
-    <div class="fc"><h4>Navigate</h4><ul><li><a href="jacob-realtor.html">Home</a></li><li><a href="jacob-listings.html">Listings</a></li><li><a href="jacob-about.html">About</a></li><li><a href="jacob-contact.html">Contact</a></li></ul></div>
+    <div class="fc"><h4>Navigate</h4><ul><li><a href="index.html">Home</a></li><li><a href="jacob-listings.html">Listings</a></li><li><a href="jacob-about.html">About</a></li><li><a href="jacob-contact.html">Contact</a></li></ul></div>
     <div class="fc"><h4>Areas</h4><ul><li><a href="#">River Oaks</a></li><li><a href="#">The Heights</a></li><li><a href="#">Montrose</a></li><li><a href="#">Memorial</a></li></ul></div>
     <div class="fc"><h4>Connect</h4><ul><li><a href="#">(713) 555-0192</a></li><li><a href="#"><span class="__cf_email__" data-cfemail="076d66646865476d66646865706e6b6b6e666a742964686a">[email&#160;protected]</span></a></li><li><a href="#">Instagram</a></li><li><a href="#">LinkedIn</a></li></ul></div>
   </div>
