--- a/jacob-about.html
+++ b/jacob-about.html
@@ -133,7 +133,7 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
 </nav>
 <div class="mmenu" id="mmenu">
   <ul>
-    <li><a href="jacob-realtor.html" class="ml">Home</a></li>
+    <li><a href="index.html" class="ml">Home</a></li>
     <li><a href="jacob-listings.html" class="ml">Listings</a></li>
     <li><a href="jacob-about.html" class="ml">About</a></li>
     <li><a href="jacob-contact.html" class="ml">Contact</a></li>
@@ -241,14 +241,14 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
 <footer>
   <div class="fg-grid">
     <div><div class="fl-name">Jacob Williams</div><p class="fl-tag">Houston's trusted luxury real estate advisor — helping families find exceptional homes since 2012.</p></div>
-    <div class="fc"><h4>Navigate</h4><ul><li><a href="jacob-realtor.html">Home</a></li><li><a href="jacob-listings.html">Listings</a></li><li><a href="jacob-about.html">About</a></li><li><a href="jacob-contact.html">Contact</a></li></ul></div>
+    <div class="fc"><h4>Navigate</h4><ul><li><a href="index.html">Home</a></li><li><a href="jacob-listings.html">Listings</a></li><li><a href="jacob-about.html">About</a></li><li><a href="jacob-contact.html">Contact</a></li></ul></div>
     <div class="fc"><h4>Areas</h4><ul><li><a href="#">River Oaks</a></li><li><a href="#">The Heights</a></li><li><a href="#">Montrose</a></li><li><a href="#">Memorial</a></li></ul></div>
-    <div class="fc"><h4>Connect</h4><ul><li><a href="#">(713) 555-0192</a></li><li><a href="#">jacob@jacobwilliams.com</a></li><li><a href="#">Instagram</a></li><li><a href="#">LinkedIn</a></li></ul></div>
+    <div class="fc"><h4>Connect</h4><ul><li><a href="#">(713) 555-0192</a></li><li><a href="#"><span class="__cf_email__" data-cfemail="e18b80828e83a18b80828e8396888d8d88808c92cf828e8c">[email&#160;protected]</span></a></li><li><a href="#">Instagram</a></li><li><a href="#">LinkedIn</a></li></ul></div>
   </div>
   <div class="fbot"><p>© 2025 Jacob Williams Real Estate. All Rights Reserved.</p><p>Licensed Texas Realtor · TREC #12345678</p></div>
 </footer>
 
-<script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
 const cur=document.getElementById('cur'),cr=document.getElementById('curRing');let mx=0,my=0,rx=0,ry=0;
 document.addEventListener('mousemove',e=>{mx=e.clientX;my=e.clientY;});
 (function a(){cur.style.left=mx+'px';cur.style.top=my+'px';rx+=(mx-rx)*.14;ry+=(my-ry)*.14;cr.style.left=rx+'px';cr.style.top=ry+'px';requestAnimationFrame(a);})();
@@ -258,9 +258,4 @@ const hbg=document.getElementById('hbg'),mm=document.getElementById('mmenu');
 hbg.addEventListener('click',()=>{hbg.classList.toggle('open');mm.classList.toggle('open');document.body.style.overflow=mm.classList.contains('open')?'hidden':'';});
 document.querySelectorAll('.ml').forEach(l=>l.addEventListener('click',()=>{hbg.classList.remove('open');mm.classList.remove('open');document.body.style.overflow='';}));
 const obs=new IntersectionObserver(e=>e.forEach(x=>{if(x.isIntersecting){x.target.classList.add('vis');obs.unobserve(x.target);}}),{threshold:.08,rootMargin:'0px 0px -50px 0px'});
-document.querySelectorAll('.sr').forEach(el=>obs.observe(el));
-const hp=document.querySelector('.ah-img img');
-window.addEventListener('scroll',()=>{if(hp)hp.style.transform=`translateY(${scrollY*.08}px) scale(1)`;});
-</script>
-</body>
-</html>
+document.querySelectorAll('.sr').forEac
