--- a/jacob-listings.html
+++ b/jacob-listings.html
@@ -176,7 +176,7 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
 
 <div class="mmenu" id="mmenu">
   <ul>
-    <li><a href="jacob-realtor.html" class="ml">Home</a></li>
+    <li><a href="index.html" class="ml">Home</a></li>
     <li><a href="jacob-listings.html" class="ml">Listings</a></li>
     <li><a href="jacob-about.html" class="ml">About</a></li>
     <li><a href="jacob-contact.html" class="ml">Contact</a></li>
@@ -327,14 +327,14 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
 <footer>
   <div class="fg-grid">
     <div><div class="fl-name">Jacob Williams</div><p class="fl-tag">Houston's trusted luxury real estate advisor — helping families find exceptional homes since 2012.</p></div>
-    <div class="fc"><h4>Navigate</h4><ul><li><a href="jacob-realtor.html">Home</a></li><li><a href="jacob-listings.html">Listings</a></li><li><a href="jacob-about.html">About</a></li><li><a href="jacob-contact.html">Contact</a></li></ul></div>
+    <div class="fc"><h4>Navigate</h4><ul><li><a href="index.html">Home</a></li><li><a href="jacob-listings.html">Listings</a></li><li><a href="jacob-about.html">About</a></li><li><a href="jacob-contact.html">Contact</a></li></ul></div>
     <div class="fc"><h4>Areas</h4><ul><li><a href="#">River Oaks</a></li><li><a href="#">The Heights</a></li><li><a href="#">Montrose</a></li><li><a href="#">Memorial</a></li></ul></div>
-    <div class="fc"><h4>Connect</h4><ul><li><a href="#">(713) 555-0192</a></li><li><a href="#">jacob@jacobwilliams.com</a></li><li><a href="#">Instagram</a></li><li><a href="#">LinkedIn</a></li></ul></div>
+    <div class="fc"><h4>Connect</h4><ul><li><a href="#">(713) 555-0192</a></li><li><a href="#"><span class="__cf_email__" data-cfemail="6903080a060b2903080a060b1e0005050008041a470a0604">[email&#160;protected]</span></a></li><li><a href="#">Instagram</a></li><li><a href="#">LinkedIn</a></li></ul></div>
   </div>
   <div class="fbot"><p>© 2025 Jacob Williams Real Estate. All Rights Reserved.</p><p>Licensed Texas Realtor · TREC #12345678</p></div>
 </footer>
 
-<script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
 const cur=document.getElementById('cur'),cr=document.getElementById('curRing');
 let mx=0,my=0,rx=0,ry=0;
 document.addEventListener('mousemove',e=>{mx=e.clientX;my=e.clientY;});
@@ -347,7 +347,4 @@ const obs=new IntersectionObserver(e=>e.forEach(x=>{if(x.isIntersecting){x.targe
 document.querySelectorAll('.sr').forEach(el=>obs.observe(el));
 function setFilter(btn,f){document.querySelectorAll('.filter-btn').forEach(b=>b.classList.remove('active'));btn.classList.add('active');}
 document.getElementById('gridBtn').addEventListener('click',function(){this.classList.add('active');document.getElementById('listBtn').classList.remove('active');document.getElementById('listGrid').classList.remove('list-view');});
-document.getElementById('listBtn').addEventListener('click',function(){this.classList.add('active');document.getElementById('gridBtn').classList.remove('active');document.getElementById('listGrid').classList.add('list-view');});
-</script>
-</body>
-</html>
+document.getElementById('listBtn').addEventListene
