--- a/jacob-property.html
+++ b/jacob-property.html
@@ -159,7 +159,7 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
 </nav>
 <div class="mmenu" id="mmenu">
   <ul>
-    <li><a href="jacob-realtor.html" class="ml">Home</a></li>
+    <li><a href="index.html" class="ml">Home</a></li>
     <li><a href="jacob-listings.html" class="ml">Listings</a></li>
     <li><a href="jacob-about.html" class="ml">About</a></li>
     <li><a href="jacob-contact.html" class="ml">Contact</a></li>
@@ -186,7 +186,7 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
 
 <!-- BREADCRUMB -->
 <div class="breadcrumb">
-  <a href="jacob-realtor.html">Home</a>
+  <a href="index.html">Home</a>
   <span>/</span>
   <a href="jacob-listings.html">Listings</a>
   <span>/</span>
@@ -332,14 +332,14 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
 <footer>
   <div class="fg-grid">
     <div><div class="fl-name">Jacob Williams</div><p class="fl-tag">Houston's trusted luxury real estate advisor — helping families find exceptional homes since 2012.</p></div>
-    <div class="fc"><h4>Navigate</h4><ul><li><a href="jacob-realtor.html">Home</a></li><li><a href="jacob-listings.html">Listings</a></li><li><a href="jacob-about.html">About</a></li><li><a href="jacob-contact.html">Contact</a></li></ul></div>
+    <div class="fc"><h4>Navigate</h4><ul><li><a href="index.html">Home</a></li><li><a href="jacob-listings.html">Listings</a></li><li><a href="jacob-about.html">About</a></li><li><a href="jacob-contact.html">Contact</a></li></ul></div>
     <div class="fc"><h4>Areas</h4><ul><li><a href="#">River Oaks</a></li><li><a href="#">The Heights</a></li><li><a href="#">Montrose</a></li><li><a href="#">Memorial</a></li></ul></div>
-    <div class="fc"><h4>Connect</h4><ul><li><a href="#">(713) 555-0192</a></li><li><a href="#">jacob@jacobwilliams.com</a></li><li><a href="#">Instagram</a></li><li><a href="#">LinkedIn</a></li></ul></div>
+    <div class="fc"><h4>Connect</h4><ul><li><a href="#">(713) 555-0192</a></li><li><a href="#"><span class="__cf_email__" data-cfemail="fb919a989499bb919a9894998c929797929a9688d5989496">[email&#160;protected]</span></a></li><li><a href="#">Instagram</a></li><li><a href="#">LinkedIn</a></li></ul></div>
   </div>
   <div class="fbot"><p>© 2025 Jacob Williams Real Estate. All Rights Reserved.</p><p>Licensed Texas Realtor · TREC #12345678</p></div>
 </footer>
 
-<script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
 const cur=document.getElementById('cur'),cr=document.getElementById('curRing');let mx=0,my=0,rx=0,ry=0;
 document.addEventListener('mousemove',e=>{mx=e.clientX;my=e.clientY;});
 (function a(){cur.style.left=mx+'px';cur.style.top=my+'px';rx+=(mx-rx)*.14;ry+=(my-ry)*.14;cr.style.left=rx+'px';cr.style.top=ry+'px';requestAnimationFrame(a);})();
@@ -351,7 +351,4 @@ const obs=new IntersectionObserver(e=>e.forEach(x=>{if(x.isIntersecting){x.targe
 document.querySelectorAll('.sr').forEach(el=>obs.observe(el));
 const imgs=['https://images.unsplash.com/photo-1600047509807-ba8f99d2cdde?w=1400&q=80','https://images.unsplash.com/photo-1600607687920-4e2a09cf159d?w=1400&q=80','https://images.unsplash.com/photo-1600566753086-00f18fb6b3ea?w=1400&q=80','https://images.unsplash.com/photo-1600573472592-401b489a3cdc?w=1400&q=80','https://images.unsplash.com/photo-1560184897-ae75f418493e?w=1400&q=80'];
 function setImg(i,el){document.getElementById('mainImg').src=imgs[i];document.getElementById('gallCount').textContent=(i+1)+' / '+imgs.length;document.querySelectorAll('.gallery-thumb').forEach(t=>t.classList.remove('active'));el.classList.add('active');}
-function openTab(btn,id){document.querySelectorAll('.tab').forEach(t=>t.classList.remove('active'));document.querySelectorAll('.tab-panel').forEach(p=>p.classList.remove('active'));btn.classList.add('active');document.getElementById(id).classList.add('active');}
-</script>
-</body>
-</html>
+function openTab(btn,id){document.querySelectorAll('.tab').forEach(t=>t.classList.re
