--- a/jacob-contact.html
+++ b/jacob-contact.html
@@ -136,9 +136,9 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
         <div class="cmeth-ic">📞</div>
         <div><div class="cmlabel">Direct Line</div><div class="cmval">(713) 555-0192</div></div>
       </a>
-      <a href="/cdn-cgi/l/email-protection#94fef5f7fbf6d4fef5f7fbf6e3fdf8f8fdf5f9e7baf7fbf9" class="cmethod">
+      <a href="/cdn-cgi/l/email-protection#87ede6e4e8e5c7ede6e4e8e5f0eeebebeee6eaf4a9e4e8ea" class="cmethod">
         <div class="cmeth-ic">✉️</div>
-        <div><div class="cmlabel">Email</div><div class="cmval"><span class="__cf_email__" data-cfemail="751f14161a17351f14161a17021c19191c1418065b161a18">[email&#160;protected]</span></div></div>
+        <div><div class="cmlabel">Email</div><div class="cmval"><span class="__cf_email__" data-cfemail="325853515d50725853515d50455b5e5e5b535f411c515d5f">[email&#160;protected]</span></div></div>
       </a>
       <a href="#" class="cmethod">
         <div class="cmeth-ic">📍</div>
@@ -234,20 +234,29 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
     <div><div class="fl-name">Jacob Williams</div><p class="fl-tag">Houston's trusted luxury real estate advisor — helping families find exceptional homes since 2012.</p></div>
     <div class="fc"><h4>Navigate</h4><ul><li><a href="index.html">Home</a></li><li><a href="jacob-listings.html">Listings</a></li><li><a href="jacob-about.html">About</a></li><li><a href="jacob-contact.html">Contact</a></li></ul></div>
     <div class="fc"><h4>Areas</h4><ul><li><a href="#">River Oaks</a></li><li><a href="#">The Heights</a></li><li><a href="#">Montrose</a></li><li><a href="#">Memorial</a></li></ul></div>
-    <div class="fc"><h4>Connect</h4><ul><li><a href="#">(713) 555-0192</a></li><li><a href="#"><span class="__cf_email__" data-cfemail="076d66646865476d66646865706e6b6b6e666a742964686a">[email&#160;protected]</span></a></li><li><a href="#">Instagram</a></li><li><a href="#">LinkedIn</a></li></ul></div>
+    <div class="fc"><h4>Connect</h4><ul><li><a href="#">(713) 555-0192</a></li><li><a href="#"><span class="__cf_email__" data-cfemail="3e545f5d515c7e545f5d515c49575252575f534d105d5153">[email&#160;protected]</span></a></li><li><a href="#">Instagram</a></li><li><a href="#">LinkedIn</a></li></ul></div>
   </div>
   <div class="fbot"><p>© 2025 Jacob Williams Real Estate. All Rights Reserved.</p><p>Licensed Texas Realtor · TREC #12345678</p></div>
 </footer>
 
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
-const cur=document.getElementById('cur'),cr=document.getElementById('curRing');let mx=0,my=0,rx=0,ry=0;
-document.addEventListener('mousemove',e=>{mx=e.clientX;my=e.clientY;});
-(function a(){cur.style.left=mx+'px';cur.style.top=my+'px';rx+=(mx-rx)*.14;ry+=(my-ry)*.14;cr.style.left=rx+'px';cr.style.top=ry+'px';requestAnimationFrame(a);})();
-document.querySelectorAll('a,button,.faq-q,.cmethod').forEach(el=>{el.addEventListener('mouseenter',()=>{cur.classList.add('big');cr.classList.add('big');});el.addEventListener('mouseleave',()=>{cur.classList.remove('big');cr.classList.remove('big');});});
+// HAMBURGER
 const hbg=document.getElementById('hbg'),mm=document.getElementById('mmenu');
-hbg.addEventListener('click',()=>{hbg.classList.toggle('open');mm.classList.toggle('open');document.body.style.overflow=mm.classList.contains('open')?'hidden':'';});
+if(hbg){hbg.addEventListener('click',()=>{hbg.classList.toggle('open');mm.classList.toggle('open');document.body.style.overflow=mm.classList.contains('open')?'hidden':'';});}
 document.querySelectorAll('.ml').forEach(l=>l.addEventListener('click',()=>{hbg.classList.remove('open');mm.classList.remove('open');document.body.style.overflow='';}));
-const obs=new IntersectionObserver(e=>e.forEach(x=>{if(x.isIntersecting){x.target.classList.add('vis');obs.unobserve(x.target);}}),{threshold:.08,rootMargin:'0px 0px -50px 0px'});
+
+// CURSOR
+const isMobile=window.matchMedia('(hover:none),(pointer:coarse)').matches;
+if(isMobile){document.body.style.cursor='auto';}
+const cur=document.getElementById('cur'),cr=document.getElementById('curRing');
+let mx=0,my=0,rx=0,ry=0;
+document.addEventListener('mousemove',e=>{mx=e.clientX;my=e.clientY;});
+if(!isMobile&&cur){(function anim(){cur.style.left=mx+'px';cur.style.top=my+'px';rx+=(mx-rx)*.28;ry+=(my-ry)*.28;cr.style.left=rx+'px';cr.style.top=ry+'px';requestAnimationFrame(anim);})();}
+if(!isMobile&&cur){document.querySelectorAll('a,button').forEach(el=>{el.addEventListener('mouseenter',()=>{cur.classList.add('big');cr.classList.add('big');});el.addEventListener('mouseleave',()=>{cur.classList.remove('big');cr.classList.remove('big');});});}
+
+// SCROLL REVEAL
+const obs=new IntersectionObserver(entries=>entries.forEach(e=>{if(e.isIntersecting){e.target.classList.add('vis');obs.unobserve(e.target);}}),{threshold:.08,rootMargin:'0px 0px -40px 0px'});
 document.querySelectorAll('.sr').forEach(el=>obs.observe(el));
-function selectIntent(btn){document.querySelectorAll('.intent-btn').forEach(b=>b.classList.remove('sel'));btn.classList.add('sel');}
-function submitForm(){document.getElementById(
+</script>
+</body>
+</html>
