--- a/jacob-property.html
+++ b/jacob-property.html
@@ -334,21 +334,29 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
     <div><div class="fl-name">Jacob Williams</div><p class="fl-tag">Houston's trusted luxury real estate advisor — helping families find exceptional homes since 2012.</p></div>
     <div class="fc"><h4>Navigate</h4><ul><li><a href="index.html">Home</a></li><li><a href="jacob-listings.html">Listings</a></li><li><a href="jacob-about.html">About</a></li><li><a href="jacob-contact.html">Contact</a></li></ul></div>
     <div class="fc"><h4>Areas</h4><ul><li><a href="#">River Oaks</a></li><li><a href="#">The Heights</a></li><li><a href="#">Montrose</a></li><li><a href="#">Memorial</a></li></ul></div>
-    <div class="fc"><h4>Connect</h4><ul><li><a href="#">(713) 555-0192</a></li><li><a href="#"><span class="__cf_email__" data-cfemail="fb919a989499bb919a9894998c929797929a9688d5989496">[email&#160;protected]</span></a></li><li><a href="#">Instagram</a></li><li><a href="#">LinkedIn</a></li></ul></div>
+    <div class="fc"><h4>Connect</h4><ul><li><a href="#">(713) 555-0192</a></li><li><a href="#"><span class="__cf_email__" data-cfemail="d1bbb0b2beb391bbb0b2beb3a6b8bdbdb8b0bca2ffb2bebc">[email&#160;protected]</span></a></li><li><a href="#">Instagram</a></li><li><a href="#">LinkedIn</a></li></ul></div>
   </div>
   <div class="fbot"><p>© 2025 Jacob Williams Real Estate. All Rights Reserved.</p><p>Licensed Texas Realtor · TREC #12345678</p></div>
 </footer>
 
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
-const cur=document.getElementById('cur'),cr=document.getElementById('curRing');let mx=0,my=0,rx=0,ry=0;
-document.addEventListener('mousemove',e=>{mx=e.clientX;my=e.clientY;});
-(function a(){cur.style.left=mx+'px';cur.style.top=my+'px';rx+=(mx-rx)*.14;ry+=(my-ry)*.14;cr.style.left=rx+'px';cr.style.top=ry+'px';requestAnimationFrame(a);})();
-document.querySelectorAll('a,button,.lc,.gallery-thumb').forEach(el=>{el.addEventListener('mouseenter',()=>{cur.classList.add('big');cr.classList.add('big');});el.addEventListener('mouseleave',()=>{cur.classList.remove('big');cr.classList.remove('big');});});
+// HAMBURGER
 const hbg=document.getElementById('hbg'),mm=document.getElementById('mmenu');
-hbg.addEventListener('click',()=>{hbg.classList.toggle('open');mm.classList.toggle('open');document.body.style.overflow=mm.classList.contains('open')?'hidden':'';});
+if(hbg){hbg.addEventListener('click',()=>{hbg.classList.toggle('open');mm.classList.toggle('open');document.body.style.overflow=mm.classList.contains('open')?'hidden':'';});}
 document.querySelectorAll('.ml').forEach(l=>l.addEventListener('click',()=>{hbg.classList.remove('open');mm.classList.remove('open');document.body.style.overflow='';}));
-const obs=new IntersectionObserver(e=>e.forEach(x=>{if(x.isIntersecting){x.target.classList.add('vis');obs.unobserve(x.target);}}),{threshold:.08,rootMargin:'0px 0px -50px 0px'});
+
+// CURSOR
+const isMobile=window.matchMedia('(hover:none),(pointer:coarse)').matches;
+if(isMobile){document.body.style.cursor='auto';}
+const cur=document.getElementById('cur'),cr=document.getElementById('curRing');
+let mx=0,my=0,rx=0,ry=0;
+document.addEventListener('mousemove',e=>{mx=e.clientX;my=e.clientY;});
+if(!isMobile&&cur){(function anim(){cur.style.left=mx+'px';cur.style.top=my+'px';rx+=(mx-rx)*.28;ry+=(my-ry)*.28;cr.style.left=rx+'px';cr.style.top=ry+'px';requestAnimationFrame(anim);})();}
+if(!isMobile&&cur){document.querySelectorAll('a,button').forEach(el=>{el.addEventListener('mouseenter',()=>{cur.classList.add('big');cr.classList.add('big');});el.addEventListener('mouseleave',()=>{cur.classList.remove('big');cr.classList.remove('big');});});}
+
+// SCROLL REVEAL
+const obs=new IntersectionObserver(entries=>entries.forEach(e=>{if(e.isIntersecting){e.target.classList.add('vis');obs.unobserve(e.target);}}),{threshold:.08,rootMargin:'0px 0px -40px 0px'});
 document.querySelectorAll('.sr').forEach(el=>obs.observe(el));
-const imgs=['https://images.unsplash.com/photo-1600047509807-ba8f99d2cdde?w=1400&q=80','https://images.unsplash.com/photo-1600607687920-4e2a09cf159d?w=1400&q=80','https://images.unsplash.com/photo-1600566753086-00f18fb6b3ea?w=1400&q=80','https://images.unsplash.com/photo-1600573472592-401b489a3cdc?w=1400&q=80','https://images.unsplash.com/photo-1560184897-ae75f418493e?w=1400&q=80'];
-function setImg(i,el){document.getElementById('mainImg').src=imgs[i];document.getElementById('gallCount').textContent=(i+1)+' / '+imgs.length;document.querySelectorAll('.gallery-thumb').forEach(t=>t.classList.remove('active'));el.classList.add('active');}
-function openTab(btn,id){document.querySelectorAll('.tab').forEach(t=>t.classList.re
+</script>
+</body>
+</html>
