--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@ footer { background:#040404; border-top:1px solid var(--border); padding:72px 8%
     </h1>
     <p class="h-desc">Where exceptional properties meet discerning buyers. Jacob Williams brings 12 years of unmatched expertise to Houston's finest neighborhoods.</p>
     <div class="h-ctas">
-      <a href="#listings" class="btn-p"><span>Explore Listings <svg width="14" height="14" viewBox="0 0 16 16" fill="none"><path d="M3 8h10M9 4l4 4-4 4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg></span></a>
-      <a href="#contact" class="btn-g">Schedule Consultation</a>
+      <a href="jacob-listings.html" class="btn-p"><span>Explore Listings <svg width="14" height="14" viewBox="0 0 16 16" fill="none"><path d="M3 8h10M9 4l4 4-4 4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg></span></a>
+      <a href="jacob-contact.html" class="btn-g">Schedule Consultation</a>
     </div>
     <div class="h-stats">
       <div class="hst"><div class="hst-n">320<sup>+</sup></div><div class="hst-l">Homes Sold</div></div>
@@ -336,7 +336,7 @@ footer { background:#040404; border-top:1px solid var(--border); padding:72px 8%
       <div class="eyebrow"><div class="eline"></div><span class="etext">Expertise</span></div>
       <h2 class="stitle">Full-Service<br><em>Real Estate</em></h2>
       <p>Every transaction handled with the precision, discretion, and dedication that Houston's luxury market demands.</p>
-      <a href="#contact" class="btn-p" style="display:inline-flex;width:fit-content;"><span>Start Today →</span></a>
+      <a href="jacob-contact.html" class="btn-p" style="display:inline-flex;width:fit-content;"><span>Start Today →</span></a>
     </div>
     <div class="srv-list">
       <div class="si sr sd1"><span class="si-num">01</span><h3>Home Buying</h3><p>From your first search to closing day, Jacob guides you through every step — securing the right home at the right price in Houston's competitive market.</p></div>
