--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ nav.on { background:rgba(8,8,8,.94); backdrop-filter:blur(20px); border-color:va
 /* HERO */
 .hero { height:100vh; min-height:680px; display:grid; grid-template-columns:1fr 1fr; overflow:hidden; position:relative; }
 .h-left { position:relative; overflow:hidden; }
-.h-left img { width:100%; height:100%; object-fit:cover; object-position:top center; display:block; transform:scale(1.1); animation:himg 2s 1.8s var(--ease) both; }
+.h-left img { width:100%; height:100%; object-fit:cover; object-position:center top; display:block; transform:scale(1.1); animation:himg 2s 1.8s var(--ease) both; }
 @keyframes himg { to{transform:scale(1.0)} }
 .h-left-ov { position:absolute; inset:0; background:linear-gradient(to right,rgba(8,8,8,.25) 0%,transparent 40%),linear-gradient(to top,rgba(8,8,8,.65) 0%,transparent 55%); }
 .h-badge { position:absolute; bottom:44px; left:36px; }
@@ -289,7 +289,7 @@ footer { background:#040404; border-top:1px solid var(--border); padding:72px 8%
 <!-- HERO -->
 <section class="hero" id="home">
   <div class="h-left">
-    <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?w=900&q=85&fit=crop&crop=top" alt="Jacob Williams" id="hpimg">
+    <img src="jacob-photo.png" alt="Jacob Williams" id="hpimg">
     <div class="h-left-ov"></div>
     <div class="h-badge">
       <div class="hb-line"></div>
@@ -381,7 +381,7 @@ footer { background:#040404; border-top:1px solid var(--border); padding:72px 8%
 <!-- ABOUT -->
 <section class="abt" id="about">
   <div class="abt-vis sr sl">
-    <img src="https://images.unsplash.com/photo-1556157382-97eda2f9e2bf?w=800&q=85&fit=crop&crop=top" alt="Jacob Williams" id="apimg">
+    <img src="jacob-photo.png" alt="Jacob Williams" id="apimg">
     <div class="abt-vis-ov"></div>
     <div class="abt-badge sr sc"><div class="abnum">12</div><div class="abtxt">Years in<br>Houston</div></div>
   </div>
