--- a/jacob-about.html
+++ b/jacob-about.html
@@ -152,7 +152,7 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
 <!-- HERO -->
 <section class="abt-hero" id="home">
   <div class="ah-img">
-    <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?w=900&q=85&fit=crop&crop=top" alt="Jacob Williams">
+    <img src="jacob-photo.png" alt="Jacob Williams">
     <div class="ah-img-ov"></div>
   </div>
   <div class="ah-content">
@@ -176,7 +176,7 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
 <!-- STORY -->
 <section class="story">
   <div class="story-img sr sl">
-    <img src="https://images.unsplash.com/photo-1556157382-97eda2f9e2bf?w=700&q=85&fit=crop&crop=top" alt="Jacob Williams">
+    <img src="jacob-photo.png" alt="Jacob Williams">
     <div class="story-img-accent"></div>
     <div class="story-img-badge sr sc"><div class="sib-num">320</div><div class="sib-txt">Families<br>Helped</div></div>
   </div>
