--- a/jacob-services.html
+++ b/jacob-services.html
@@ -335,7 +335,7 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
 <!-- COMMITMENT -->
 <section class="commitment">
   <div class="commitment-visual sr sl">
-    <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?w=700&q=85&fit=crop&crop=top" alt="Jacob Williams">
+    <img src="jacob-photo.png" alt="Jacob Williams">
     <div class="commitment-accent"></div>
     <div class="commitment-badge sr sc"><div class="cb-num">98%</div><div class="cb-txt">Client<br>Satisfaction</div></div>
   </div>
