--- a/jacob-about.html
+++ b/jacob-about.html
@@ -133,6 +133,7 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
 <nav id="nav">
   <a href="index.html" class="logo"><span class="logo-n">Jacob Williams</span><span class="logo-s">Luxury Real Estate · Houston</span></a>
   <ul class="navul">
+    <li><a href="jacob-services.html">Services</a></li>
     <li><a href="jacob-listings.html">Listings</a></li>
     <li><a href="jacob-about.html" class="active">About</a></li>
     <li><a href="jacob-contact.html" class="ncta">Contact</a></li>
@@ -142,6 +143,7 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
 <div class="mmenu" id="mmenu">
   <ul>
     <li><a href="index.html" class="ml">Home</a></li>
+    <li><a href="jacob-services.html" class="ml">Services</a></li>
     <li><a href="jacob-listings.html" class="ml">Listings</a></li>
     <li><a href="jacob-about.html" class="ml">About</a></li>
     <li><a href="jacob-contact.html" class="ml">Contact</a></li>
