--- a/jacob-property.html
+++ b/jacob-property.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>1204 Kirby Drive — Jacob Williams Luxury Real Estate</title>
+<title id="pageTitle">Property — Jacob Williams Luxury Real Estate</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,600;1,300;1,400&family=Object+Sans:wght@400;700&display=swap" rel="stylesheet">
 <style>
@@ -176,7 +176,7 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
 </div>
 
 <!-- GALLERY HERO -->
-<div class="gallery-hero">
+<div class="gallery-hero" id="galleryHero">
   <div class="gallery-main">
     <img id="mainImg" src="https://images.unsplash.com/photo-1600047509807-ba8f99d2cdde?w=1400&q=80" alt="1204 Kirby Drive">
     <div class="gallery-ov"></div>
@@ -300,7 +300,7 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
     <div class="contact-card-title">Interested?</div>
     <div class="contact-card-sub">Schedule a private showing today</div>
     <div class="agent-row">
-      <div class="agent-avatar"><img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?w=200&q=80&fit=crop&crop=top" alt="Jacob Williams"></div>
+      <div class="agent-avatar"><img src="jacob-photo.png" alt="Jacob Williams"></div>
       <div>
         <div class="agent-name">Jacob Williams</div>
         <div class="agent-lic">Licensed Realtor · TREC #12345678</div>
@@ -374,5 +374,110 @@ document.querySelectorAll('.sr').forEach(el=>obs.observe(el));
   <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="4" width="18" height="18" rx="2"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>
   <span>Book a Call</span>
 </button>
+
+<script src="listings-data.js"></script>
+<script>
+(function(){
+  // Get id from URL
+  const params = new URLSearchParams(window.location.search);
+  const id = parseInt(params.get('id')) || 1;
+  const p = LISTINGS.find(l => l.id === id) || LISTINGS[0];
+
+  // Update page title
+  document.getElementById('pageTitle').textContent = p.address + ' — Jacob Williams Luxury Real Estate';
+
+  // Gallery
+  const mainImg = document.getElementById('mainImg');
+  mainImg.src = p.images[0];
+  mainImg.alt = p.address;
+
+  const strip = document.querySelector('.gallery-strip');
+  strip.innerHTML = p.images.map((src,i) => `
+    <div class="gallery-thumb${i===0?' active':''}" onclick="setImg(${i},this)">
+      <img src="${src}" alt="${p.address} photo ${i+1}" loading="lazy">
+    </div>`).join('');
+
+  // Breadcrumb
+  document.querySelector('.breadcrumb .current').textContent = p.address + ', ' + p.neighborhood;
+
+  // Badge
+  function badgeClass(s){ return s==='Sold'?'sold':s==='Pending'?'pending':''; }
+  const badge = document.querySelector('.prop-badge');
+  badge.textContent = p.status + (p.status==='For Sale'||p.status==='New' ? ' · Exclusive Listing' : '');
+  badge.className = 'prop-badge ' + badgeClass(p.status);
+
+  // Header
+  document.querySelector('.prop-price').textContent = p.price;
+  document.querySelector('.prop-address').textContent = p.address + ', ' + p.neighborhood + ', ' + p.city;
+
+  // Quick specs
+  const specs = document.querySelectorAll('.pqs');
+  if(specs[0]){ specs[0].querySelector('.pqs-num').textContent = p.beds; }
+  if(specs[1]){ specs[1].querySelector('.pqs-num').textContent = p.baths; }
+  if(specs[2]){ specs[2].querySelector('.pqs-num').textContent = p.sqft; }
+  if(specs[3]){ specs[3].querySelector('.pqs-num').textContent = p.lot.split(' ')[0]; }
+  if(specs[4]){ specs[4].querySelector('.pqs-num').textContent = p.garage; }
+
+  // Description
+  document.querySelector('.prop-desc').innerHTML = p.description.map(t=>`<p>${t}</p>`).join('');
+
+  // Features
+  document.querySelector('.features-grid').innerHTML = p.features.map(f=>`
+    <div class="feat"><div class="feat-dot"></div><div class="feat-text">${f}</div></div>`).join('');
+
+  // Details table
+  document.querySelector('.details-table').innerHTML = [
+    ['Property Type', p.propertyType],
+    ['Year Built',    p.yearBuilt],
+    ['Lot Size',      p.lot],
+    ['Living Area',   p.sqft + ' sqft'],
+    ['Bedrooms',      p.beds],
+    ['Bathrooms',     p.baths],
+    ['Garage',        p.garage + '-Car'],
+    ['HOA',           p.hoa],
+    ['Property Tax',  p.tax],
+    ['School District', p.school],
+    ['MLS Number',    p.mls],
+    ['Days on Market', p.daysOnMarket + ' Days'],
+    ['Listing Agent', 'Jacob Williams, TREC #12345678'],
+  ].map(([label,value])=>`
+    <div class="detail-row">
+      <span class="detail-label">${label}</span>
+      <span class="detail-value">${value}</span>
+    </div>`).join('');
+
+  // Location tab
+  document.querySelector('.map-placeholder p').textContent = p.address + ', ' + p.neighborhood;
+  document.querySelector('.map-nearby').innerHTML = p.nearby.map(n=>`
+    <div class="nearby-item">
+      <div class="nearby-name">${n.name}</div>
+      <div class="nearby-dist">${n.dist} away</div>
+    </div>`).join('');
+
+  // Similar properties (3 others, excluding current)
+  const similar = LISTINGS.filter(l=>l.id!==p.id).slice(0,3);
+  document.querySelector('.sim-grid').innerHTML = similar.map((s,i)=>`
+    <a href="jacob-property.html?id=${s.id}" class="lc sr sd${i+1}">
+      <img src="${s.images[0]}" alt="${s.address}" loading="lazy">
+      <div class="lc-ov"></div>
+      <div class="lbadge ${badgeClass(s.status)}">${s.status}</div>
+      <div class="linfo">
+        <div class="lprice">${s.price}</div>
+        <div class="laddr">${s.address} · ${s.neighborhood}</div>
+        <div class="lspecs">
+          <span>${s.beds} Beds</span><span>·</span>
+          <span>${s.baths} Baths</span><span>·</span>
+          <span>${s.sqft} sqft</span>
+        </div>
+      </div>
+    </a>`).join('');
+
+  // Gallery image count
+  document.getElementById('gallCount').textContent = '1 / ' + p.images.length;
+
+  // Re-observe scroll reveals
+  document.querySelectorAll('.sr:not(.vis)').forEach(el => obs.observe(el));
+})();
+</script>
 </body>
 </html>
