--- a/jacob-property.html
+++ b/jacob-property.html
@@ -347,7 +347,9 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
   <div class="fbot"><p>© 2025 Jacob Williams Real Estate. All Rights Reserved.</p><p>Licensed Texas Realtor · TREC #12345678</p></div>
 </footer>
 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+<script src="listings-data.js"></script>
+<script>
 // HAMBURGER
 const hbg=document.getElementById('hbg'),mm=document.getElementById('mmenu');
 if(hbg){hbg.addEventListener('click',()=>{hbg.classList.toggle('open');mm.classList.toggle('open');document.body.style.overflow=mm.classList.contains('open')?'hidden':'';});}
@@ -375,7 +377,6 @@ document.querySelectorAll('.sr').forEach(el=>obs.observe(el));
   <span>Book a Call</span>
 </button>
 
-<script src="listings-data.js"></script>
 <script>
 (function(){
   // Get id from URL
